--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <audio controls>
           <source src="src/music/Rihanna-Diamonds.mp3" type="audio/mpeg" />
         </audio>
-        <input type="range" value="0" />
+        <input type="range" value="0" id="progress" />
       </div>
     </div>
   </body>
