--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <i class="fa-solid fa-bars"></i>
           </div>
         </nav>
-        <img src="src/Rihanna.JPG" class="song-img" />
+        <img src="src/Rihanna2.JPG" class="song-img" />
         <h1>Diamonds</h1>
         <p>Rihanna. Barbados</p>
         <audio controls id="song">
