--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
           ctrlIcon.classList.remove("fa-play");
         }
       }
+      if (song.play()) {
+        setInterval(() => {
+          progress.value = song.currentTime;
+        }, 500);
+      }
     </script>
   </body>
 </html>
