--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
         <!-- Music player -->
         <div class="music-player">
           <!-- Header -->
-          <nav>
-            <div class="circle">
-              <i class="fa-solid fa-music"></i>
-            </div>
-            <h2>Now playing</h2>
-            <div class="circle">
-              <i class="fa-solid fa-bars"></i>
-            </div>
-          </nav>
+          <div class="header">
+            <nav>
+              <div class="circle">
+                <i class="fa-solid fa-music"></i>
+              </div>
+              <h2>Now playing</h2>
+              <div class="circle">
+                <i class="fa-solid fa-bars"></i>
+              </div>
+            </nav>
+          </div>
           <!-- Song Details -->
           <div class="details">
             <img src="src/Rihanna.JPG" class="song-img" />
@@ -75,7 +77,7 @@
         <!--Playlist Items -->
         <div class="playlist-div">
           <div class="playlist">
-            <span class="song-index">1</span>
+            <span class="song-index">1.</span>
             <p class="single-song">Song one</p>
           </div>
         </div>
