--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Music Player</title>
+    <title>Music Player built by Soraya Carvajal</title>
     <link href="src/style.css" rel="stylesheet" type="text/css" />
     <script
       src="https://kit.fontawesome.com/9157e1cfe3.js"
@@ -47,14 +47,7 @@
           </div>
           <!-- song duration -->
           <div class="duration">
-            <input
-              type="range"
-              min="1"
-              max="100"
-              value="0"
-              onchange="updateProgress()"
-              id="progress"
-            />
+            <input type="range" min="1" max="100" value="0" id="progress" />
           </div>
           <!-- Buttons -->
           <div class="controls">
@@ -107,6 +100,24 @@
         </div>
       </div>
     </div>
+    <footer>
+      This project was Coded by
+      <a
+        href="https://www.linkedin.com/in/sorayacarvajal/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        Soraya Carvajal
+      </a>
+      and is
+      <a
+        href="https://github.com/icuestiona/music-player"
+        target="_blank"
+        rel="noreferrer"
+      >
+        open-sourced.
+      </a>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
